--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--section1 stsrt-->
         <div class="section1">
             <nav class="nav">
-                <img src="MSP_Logo/MSP_small_logo.svg" alt="#">
+                <img src="MSP_small_logo.svg" alt="#">
                 <a href="#">Home</a>
                 <a href="#">Service</a>
                 <a href="#">News</a>
