--- a/index.html
+++ b/index.html
@@ -18,32 +18,10 @@
 <body>
     <!--container start-->
     <div class="container">
-        <div class="menu">
-            <div class="heads">
-                <div class="info">
-                    <div class="logo-caption">
-                        <img src="MSP_LOGO_WHITE.png" class="msp-logo">
-                        <div>
-                            <h3>MSP Tech-Club</h3>
-                            <p>Ain Shams University</p>
-                        </div>
-                    </div>
-                    <i class="fa fa-times"></i>
-                </div>
-                <div class="nav-items">
-                    <a href="#">Home</a>
-                    <a href="#">Service</a>
-                    <a href="#">News</a>
-                    <a href="#">Contact</a>
-                    <hr>
-                    <button onclick="" class="btn">Login</button>
-                </div>
-            </div>
-        </div>
-        <!--section1 stsrt-->
+        <!--section1 start-->
         <div class="section1">
             <nav class="nav">
-                <img src="MSP_small_logo.svg" alt="#">
+                <img src="MSP_Logo/MSP_small_logo.svg" alt="#">
                 <a href="#">Home</a>
                 <a href="#">Service</a>
                 <a href="#">News</a>
@@ -141,9 +119,18 @@
                     <p>Get our 14 days free trail</p>
                     <hr>
                     <ul>
-                        <li>60-day chat history</li>
-                        <li>15 GB cloud storage</li>
-                        <li>24/7 Support</li>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>60-day chat history</li>
+                        </div>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>15 GB cloud storage</li>
+                        </div>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>24/7 Support</li>
+                        </div>
                     </ul>
                     <button class="btn">Choose Plan</button>
                 </div>
@@ -153,9 +140,18 @@
                     <p>Get our 14 days free trail</p>
                     <hr>
                     <ul>
-                        <li>60-day chat history</li>
-                        <li>15 GB cloud storage</li>
-                        <li>24/7 Support</li>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>60-day chat history</li>
+                        </div>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>15 GB cloud storage</li>
+                        </div>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>24/7 Support</li>
+                        </div>
                     </ul>
                     <button class="btn">Choose Plan</button>
                 </div>
@@ -165,19 +161,28 @@
                     <p>Get our 14 days free trail</p>
                     <hr>
                     <ul>
-                        <li>60-day chat history</li>
-                        <li>15 GB cloud storage</li>
-                        <li>24/7 Support</li>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>60-day chat history</li>
+                        </div>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>15 GB cloud storage</li>
+                        </div>
+                        <div>
+                            <i class="fa fa-check-circle"></i>
+                            <li>24/7 Support</li>
+                        </div>
                     </ul>
                     <button class="btn">Choose Plan</button>
                 </div>
             </div>
 
-            <ul class="change-plan">
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <div class="change-plan">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
         <!--section3 end-->
         <!--section4 start-->
