--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--section1 start-->
         <div class="section1">
             <nav class="nav">
-                <img src="MSP_Logo/MSP_small_logo.svg" alt="#">
+                <img src="MSP_small_logo.svg" alt="#">
                 <a href="#">Home</a>
                 <a href="#">Service</a>
                 <a href="#">News</a>
